# ChadEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  editor_layout.ini  vcpkg.json
editor/: main.cpp
editor/include/: defaultSceneRender.hpp  editor_layer.hpp  imreflect_glm.hpp
editor/src/: defaultSceneRender.cpp  editor_layer.cpp
engine/include/core/: component_registry.hpp  device.hpp  ecs.hpp  engine.hpp  glm_json.hpp  project_manager.hpp  scene_manager.hpp  system.hpp  timer.hpp  transform.hpp  types.hpp
engine/src/core/: device.cpp  engine.cpp  project_manager.cpp  scene_manager.cpp  transform.cpp
game/src/: main.cpp
projects/EngineTest/: EngineTest.chadproj
projects/EngineTest/src/: game.cpp
projects/test/: test.chadproj
projects/testing2/: testing2.chadproj
scenes/game/src/: main.cpp
